--- a/openstack/microbosh-v2.yml.erb
+++ b/openstack/microbosh-v2.yml.erb
@@ -35,6 +35,8 @@ resource_pools:
     sha1: d4602058781befadf0ec4f2556aa670e76135546
   cloud_properties:
     instance_type: m1.xlarge
+#    root_disk:     #<-- SAN
+#      size: 120
 
 disk_pools:
 - name: disks
